# stm32f7xx-hal

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  memory.x  memory_1024_240.x  memory_1024_320.x  memory_2048_368.x  memory_512_176.x  memory_64_176.x  memory_64_240.x  openocd.cfg  openocd.gdb  release.toml
.cargo/: config
.github/workflows/: ci.yml  clippy.yml
examples/: blinky-timer-irq.rs  blinky.rs  blinky_delay.rs  can-echo.rs  can-loopback.rs  delay-syst-blinky.rs  delay-timer-blinky.rs  exti_button.rs  flash.rs  fmc.rs  hello.rs  i2c_scanner.rs  pwm-sinus.rs  pwm.rs  pwm_advanced.rs  qspi_flash.rs  rng.rs  rtc.rs  rtic-tick.rs  serial_delay.rs  serial_dma.rs  serial_echo.rs  serial_parity.rs  spi.rs  spi_16.rs  spi_dma.rs  spi_dma_16.rs  timer-periph.rs  timer-syst.rs  timer.rs  usb_serial.rs
examples/stm32f7disco-qspi-flash/: main.rs  mt25q.rs
examples/stm32f7disco-screen/: main.rs  screen.rs
src/: adc.rs  can.rs  dac.rs  delay.rs  dma.rs  flash.rs  fmc.rs  gpio.rs  i2c.rs  lib.rs  ltdc.rs  otg_fs.rs  otg_hs.rs  prelude.rs  pwm.rs  qei.rs  qspi.rs  rcc.rs  rng.rs  rtc.rs  serial.rs  signature.rs  spi.rs  time.rs  timer.rs  watchdog.rs
src/fmc_lcd/: mod.rs  pins.rs  sealed.rs  timing.rs
src/gpio/: convert.rs  erased.rs  partially_erased.rs
src/serial/: macros.rs  mod.rs
src/timer/: pins.rs
