[package]
authors = ["Matt Vertescher <mvertescher@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the STM32F7xx family of microcontrollers"
documentation = "https://docs.rs/stm32f7xx-hal"
edition = "2018"
keywords = ["arm", "cortex-m", "stm32f7xx", "hal"]
license = "MIT OR Apache-2.0"
name = "stm32f7xx-hal"
readme = "README.md"
repository = "https://github.com/stm32-rs/stm32f7xx-hal"
version = "0.2.0"

[package.metadata.docs.rs]
features = ["stm32f746", "rt"]

[dependencies]
as-slice = "0.1.0"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
nb = "0.1.2"
stm32f7 = "0.11.0"
micromath = "1.0.0"

[dependencies.bare-metal]
version = "0.2.4"
features = ["const-fn"]

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[dependencies.void]
default-features = false
version = "1.0.2"

[dev-dependencies]
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
panic-semihosting = "0.5.2"
embedded-graphics = "0.6.1"

[features]
device-selected = []
ltdc = []
rt = ["stm32f7/rt"]
stm32f722 = ["stm32f7/stm32f7x2", "device-selected"]
stm32f723 = ["stm32f7/stm32f7x3", "device-selected"]
stm32f730 = ["stm32f7/stm32f730", "device-selected"]
stm32f732 = ["stm32f7/stm32f7x2", "device-selected"]
stm32f733 = ["stm32f7/stm32f7x3", "device-selected"]
stm32f745 = ["stm32f7/stm32f745", "device-selected"]
stm32f746 = ["stm32f7/stm32f7x6", "device-selected", "ltdc"]
stm32f756 = ["stm32f7/stm32f7x6", "device-selected", "ltdc"]
stm32f765 = ["stm32f7/stm32f765", "device-selected"]
stm32f767 = ["stm32f7/stm32f7x7", "device-selected", "ltdc"]
stm32f769 = ["stm32f7/stm32f7x9", "device-selected", "ltdc"]
stm32f777 = ["stm32f7/stm32f7x7", "device-selected", "ltdc"]
stm32f778 = ["stm32f7/stm32f7x9", "device-selected", "ltdc"]
stm32f779 = ["stm32f7/stm32f7x9", "device-selected", "ltdc"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true

[[example]]
name = "blinky_delay"
required-features = ["stm32f746", "rt"]

[[example]]
name = "blinky"
required-features = ["stm32f746", "rt"]

[[example]]
name = "hello"
required-features = ["stm32f746", "rt"]

[[example]]
name = "serial_delay"
required-features = ["stm32f746", "rt"]

[[example]]
name = "serial_echo"
required-features = ["stm32f746", "rt"]

[[example]]
name = "timer"
required-features = ["stm32f746", "rt"]

[[example]]
name = "stm32f7disco-screen"
required-features = ["stm32f746", "rt"]
