[package]
authors = ["Matt Vertescher <mvertescher@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the STM32F7xx family of microcontrollers"
documentation = "https://docs.rs/stm32f7xx-hal"
edition = "2018"
keywords = ["arm", "cortex-m", "stm32f7xx", "hal"]
license = "MIT OR Apache-2.0"
name = "stm32f7xx-hal"
readme = "README.md"
repository = "https://github.com/stm32-rs/stm32f7xx-hal"
version = "0.6.0"

[package.metadata.docs.rs]
features = ["stm32f746", "rt"]

[dependencies]
as-slice = "0.2"
cortex-m = "0.7.4"
cortex-m-rt = ">=0.6.15, <0.8"
embedded-time = "0.12.0"
nb = "1.0"
stm32f7 = "0.14.0"
micromath = "2.0"
synopsys-usb-otg = { version = "0.2.3", features = ["cortex-m"], optional = true }
stm32-fmc = { version = "0.2.0", features = ["sdram"], optional = true }
rand_core = "0.6"
bxcan = "0.6"
bare-metal = "1.0"

[dependencies.time]
version = "0.3"
default-features = false

[dependencies.cast]
default-features = false
version = "0.3.0"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.display-interface]
optional = true
version = "0.4.1"

[dev-dependencies]
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
panic-semihosting = "0.5.2"
embedded-graphics = "0.6.1"
usb-device = "0.2.5"
usbd-serial = "0.1.0"

[dev-dependencies.time]
version = "0.3"
default-features = false
features = ["macros"]

[features]
device-selected = []
ltdc = []
fmc = ["stm32-fmc"]
usb_hs_phy = []
rt = ["stm32f7/rt"]

svd-f730 = ["stm32f7/stm32f730"]
svd-f745 = ["stm32f7/stm32f745"]
svd-f765 = ["stm32f7/stm32f765"]
svd-f7x2 = ["stm32f7/stm32f7x2"]
svd-f7x3 = ["stm32f7/stm32f7x3"]
svd-f7x6 = ["stm32f7/stm32f7x6"]
svd-f7x7 = ["stm32f7/stm32f7x7"]
svd-f7x9 = ["stm32f7/stm32f7x9"]

stm32f722 = ["svd-f7x2", "device-selected"]
stm32f723 = ["svd-f7x3", "device-selected", "usb_hs_phy"]
stm32f730 = ["svd-f730", "device-selected", "usb_hs_phy", "fmc"]
stm32f732 = ["svd-f7x2", "device-selected"]
stm32f733 = ["svd-f7x3", "device-selected", "usb_hs_phy"]
stm32f745 = ["svd-f745", "device-selected", "gpioj", "gpiok", "tim_adv", "fmc"]
stm32f746 = ["svd-f7x6", "device-selected", "gpioj", "gpiok", "tim_adv", "ltdc", "fmc", "has-can"]
stm32f756 = ["svd-f7x6", "device-selected", "gpioj", "gpiok", "tim_adv", "ltdc", "fmc"]
stm32f765 = ["svd-f765", "device-selected", "gpioj", "gpiok", "tim_adv", "fmc"]
stm32f767 = ["svd-f7x7", "device-selected", "gpioj", "gpiok", "tim_adv", "ltdc", "fmc"]
stm32f769 = ["svd-f7x9", "device-selected", "gpioj", "gpiok", "tim_adv", "ltdc", "fmc"]
stm32f777 = ["svd-f7x7", "device-selected", "gpioj", "gpiok", "tim_adv", "ltdc", "fmc"]
stm32f778 = ["svd-f7x9", "device-selected", "gpioj", "gpiok", "tim_adv", "ltdc", "fmc"]
stm32f779 = ["svd-f7x9", "device-selected", "gpioj", "gpiok", "tim_adv", "ltdc", "fmc"]

fmc_lcd = ["display-interface"]

usb_fs = ["synopsys-usb-otg", "synopsys-usb-otg/fs"]
usb_hs = ["synopsys-usb-otg", "synopsys-usb-otg/hs"]

has-can = []

gpioj = []
gpiok = []
tim_adv = []

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true

[[example]]
name = "blinky_delay"
required-features = ["rt"] # stm32f746

[[example]]
name = "blinky"
required-features = ["device-selected", "rt"] # stm32f746

[[example]]
name = "flash"
required-features = ["device-selected", "rt"] # stm32f746

[[example]]
name = "fmc"
required-features = ["device-selected", "rt", "fmc"] # stm32f746

[[example]]
name = "hello"
required-features = ["device-selected", "rt"] # stm32f746

[[example]]
name = "pwm"
required-features = ["device-selected", "rt"] # stm32f767

[[example]]
name = "pwm_advanced"
required-features = ["device-selected", "rt", "tim_adv"] # stm32f767

[[example]]
name = "serial_delay"
required-features = ["device-selected", "rt"] # stm32f746

[[example]]
name = "serial_echo"
required-features = ["device-selected", "rt"] # stm32f746

[[example]]
name = "timer"
required-features = ["device-selected", "rt"] # stm32f746

[[example]]
name = "stm32f7disco-screen"
required-features = ["device-selected", "rt"] # stm32f746

[[example]]
name = "exti_button"
required-features = ["device-selected", "rt"] # stm32f746

[[example]]
name = "usb_serial"
required-features = ["device-selected", "rt", "synopsys-usb-otg"] # stm32f723

[[example]]
name = "rng"

[[example]]
name = "stm32f7disco-qspi-flash"
required-features = ["device-selected", "rt"] # stm32f746

[[example]]
name = "can-echo"
required-features = ["has-can"]

[[example]]
name = "can-loopback"
required-features = ["has-can"]
